[tool.poetry]
name = "pka-db"
version = "1.1"
description = ""
authors = ["Max Cohn <maxc4321@gmail.com>"]

[tool.poetry.scripts]
dev = 'FLASK_APP=pka-db flask run'

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
requests = "^2.25.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

